<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main2"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.myfirstapp.Main2Activity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/os"
        android:id="@+id/button7"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cn"
        android:id="@+id/button8"
        android:layout_below="@+id/button7"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/button7"
        android:onClick="sendMessage3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flat"
        android:id="@+id/button9"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button8"
        android:layout_alignEnd="@+id/button8" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dbms"
        android:id="@+id/button10"
        android:layout_alignEnd="@+id/button9"
        android:layout_below="@+id/button9"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ss"
        android:id="@+id/button11"
        android:layout_below="@+id/button10"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/button12" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/se"
        android:id="@+id/button12"
        android:layout_below="@+id/button11"
        android:layout_alignEnd="@+id/button10"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Only CN available"
        android:id="@+id/textView4"
        android:layout_alignEnd="@+id/button12"
        android:layout_below="@+id/button12"
        android:layout_alignParentStart="true" />

</RelativeLayout>
